# palantir

./: .gitignore  Cargo.toml
assets/meshes/: plane.mtl  suzanne.mtl
assets/shaders/: default.frag  default.vert  flat.frag  flat.glsl  flat.vert  lambert.frag  lambert.glsl  lambert.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/palantir-lib/: Cargo.toml
lib/palantir-lib/src/: index_buffer.rs  lib.rs  material.rs  mesh.rs  objects.rs  renderer.rs  shader.rs  texture.rs  vertex.rs  vertex_array.rs  vertex_buffer.rs
src/: app.rs  components.rs  graphics.rs  gui.rs  main.rs  render_gl.rs  resources.rs  scene.rs
src/components/: camera.rs  light.rs  mesh.rs  primitives.rs  transform.rs
src/components/primitives/: cube.rs  disk.rs  plane.rs
src/graphics/: buffers.rs  mesh.rs  renderer.rs  texture.rs
src/graphics/buffers/: index_buffer.rs  vertex_array.rs  vertex_buffer.rs
src/graphics/mesh/: mesh.rs  vertex.rs
src/graphics/renderer/: renderer.rs  shader.rs
src/gui/: debug_ui.rs  outliner.rs
src/render_gl/: buffers.rs  camera.rs  data.rs  light.rs  mesh.rs  mod.rs  renderer.rs  shader.rs
src/render_gl/buffers/: index_buffer.rs  vertex_array.rs  vertex_buffer.rs
