[package]
authors = ["Aphosis <alexy.long@orange.fr>"]
edition = "2018"
name = "palantir"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.3.1"

[dependencies]
cgmath = "0.17.0"
gl = {path = "lib/gl"}
imgui = "0.4.0"
imgui-opengl-renderer = "0.8.0"
imgui-sdl2 = "0.11.0"
tobj = "2.0.2"
sdl2 = {version = "0.34.2", features = ["bundled", "static-link"]}

[features]
gl_debug = ["gl/debug"]
